--- a/src/components/CommanderTax/CommanderTax.module.css
+++ b/src/components/CommanderTax/CommanderTax.module.css
@@ -3,7 +3,7 @@
   background-color: #444;
   border-radius: 1rem;
   top: 1rem;
-  left: 2rem;
+  left: 1rem;
   z-index: 1;
   display: flex;
   position: absolute;
